test/rbkt/Queries/zorba/syntax_errors/unexpected_character_1.xq
(: 
  Syntax error with an improved error message:
  unexpected character ":"
:)

f(3) :